# securescan

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  NOTICE  PRODUCT.md  README.md  docker-compose.yml
.github/workflows/: container.yml  docs.yml  lint.yml  release.yml  securescan.yml
action/: README.md  action.yml  entrypoint-resolve.sh  entrypoint.sh  post-pr-comment.sh  post-review.sh  test-post-review.sh  test-pr-mode.sh  test-resolve.sh
backend/: .coverage  .dockerignore  Dockerfile  README.md  pyproject.toml
backend/data/compliance/: cis-controls-v8.json  owasp-top10-2021.json  pci-dss-v4.json  soc2.json
backend/scripts/: build-dist.sh
backend/securescan/: api_keys.py  auth.py  baseline.py  baseline_writer.py  cli.py  compliance.py  config.py  config_file.py  config_lint.py  config_loader.py  database.py  dedup.py  diff.py  diff_position.py  event_tokens.py  events.py  exporters.py  fingerprint.py  git_ops.py  logging_config.py  main.py  models.py  ordering.py  pipeline.py  render_pr_comment.py  render_review.py  reports.py  review_marker.py  sbom.py  scoring.py  severity.py  suggestions.py  suppression.py  threshold.py  timeutil.py  webhook_dispatcher.py  webhook_formatters.py
backend/securescan/ai/: __init__.py  enricher.py
backend/securescan/api/: __init__.py  compliance.py  dashboard.py  keys.py  notifications.py  sbom.py  scans.py  triage.py  versioning.py  webhooks.py
backend/securescan/cli/: __init__.py  _shared.py  baseline.py  compare.py  config.py  diff.py  history.py  init.py  scan.py  serve.py  staged.py  status.py
backend/securescan/data/compliance/: cis-controls-v8.json
backend/securescan/middleware/: __init__.py  rate_limit.py
backend/securescan/scanners/: __init__.py  bandit.py  base.py  baseline.py  checkov.py  dast_builtin.py  discovery.py  dockerfile.py  gitleaks.py  license_checker.py  nmap_scanner.py  npm_audit.py  safety.py  secrets.py  semgrep.py  trivy.py  zap_scanner.py
backend/securescan/templates/reports/: report.html
backend/src/: cli.py  config.py  database.py  dedup.py  exporters.py  main.py  models.py  reports.py  sbom.py  timeutil.py
backend/src/ai/: enricher.py
backend/src/api/: __init__.py  dashboard.py  sbom.py  scans.py
backend/src/scanners/: __init__.py  bandit.py  base.py  baseline.py  checkov.py  dockerfile.py  gitleaks.py  license_checker.py  nmap_scanner.py  npm_audit.py  safety.py  secrets.py  semgrep.py  trivy.py
backend/tests/: conftest.py  test_ai.py  test_api.py  test_api_keys.py  test_api_versioning.py  test_auth.py  test_baseline.py  test_baseline_cmd.py  test_baseline_scanner.py  test_baseline_writer.py  test_ci_guard.py  test_cli_ci.py  test_cli_init.py  test_cli_staged.py  test_compare_cmd.py  test_compliance.py  test_config_file.py  test_config_lint.py  test_config_loader.py  test_config_validate_cmd.py  test_dast_builtin.py  test_db_hardening.py  test_determinism.py  test_diff.py  test_diff_cmd.py  test_diff_position.py  test_event_tokens.py  test_fingerprint.py  test_git_ops.py  test_github_review_output.py  test_logging_config.py  test_models.py  test_nmap_scanner.py  test_notifications.py  test_packaging.py  test_pdf_extra.py  test_pipeline.py  test_pipeline_integration.py  test_pr_renderer.py  test_rate_limit.py  (+24 more)
docs/: PUBLISHING.md  book.toml
docs/architecture/plans/: 2026-03-31-phase1-compliance-reports.md  2026-03-31-phase2-new-scanners.md
docs/architecture/specs/: 2026-03-31-security-audit-enhancements-design.md
docs/src/: SUMMARY.md  architecture.md  contributing.md  install.md  introduction.md  quick-start.md
docs/src/api/: endpoints.md  openapi.md  overview.md  rate-limits.md  versioning.md  webhook-payloads.md
docs/src/auth/: api-keys.md  event-tokens.md  overview.md  production-checklist.md  scopes.md
docs/src/cli/: commands.md  github-action.md  overview.md
docs/src/compare/: vs-defectdojo.md  vs-snyk.md  vs-trivy.md
docs/src/dashboard/: diff.md  notifications.md  realtime.md  sbom.md  tour.md  webhooks.md
docs/src/deployment/: configuration.md  docker.md  local-config.md  production-checklist.md  single-worker.md  verifying-artifacts.md
docs/src/integrations/: pre-commit.md
docs/src/reference/: changelog.md  faq.md  glossary.md  release-cadence.md  release-process.md
docs/src/scanning/: compliance.md  findings-severity.md  how-scans-work.md  scan-types.md  supported-scanners.md  suppression.md  triage.md
docs/theme/: securescan.css
examples/: README.md  github-action-docker.yml  github-action.yml  local-snapshot-diff.sh
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/compare/: page.tsx
frontend/src/app/diff/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/notifications/: page.tsx
frontend/src/app/sbom/: page.tsx
frontend/src/app/scan/: page.tsx
frontend/src/app/scan/[id]/: page.tsx
frontend/src/app/scanners/: page.tsx
frontend/src/app/settings/keys/: page.tsx
frontend/src/app/settings/webhooks/: page.tsx
frontend/src/components/: api-status.tsx  command-palette.tsx  data-table.tsx  diff-finding-row.tsx  directory-picker.tsx  finding-row.tsx  findings-table.tsx  history-table.tsx  key-create-modal.tsx  notification-bell.tsx  page-header.tsx  relative-time.tsx  risk-score.tsx  scan-card.tsx  scan-progress-panel.tsx  scanner-chip-strip.tsx  severity-chart.tsx  severity-edge.tsx  severity-pill-strip.tsx  sidebar.tsx  stat-card.tsx  status-icon.tsx  theme-toggle.tsx  topbar.tsx  trend-chart.tsx  webhook-create-modal.tsx  webhook-delivery-log.tsx
frontend/src/lib/: api.ts  use-is-mounted.ts  use-relative-time.ts
