[project]
name = "securescan"
version = "0.10.1"
description = "Diff-aware security scanning with multi-tool orchestration, deterministic SARIF, and PR-comment rendering."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Metbcy"}]
keywords = ["security", "sast", "dast", "sbom", "sarif", "ci"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "typer[all]>=0.15.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "weasyprint>=62.0",
    "defusedxml>=0.7.1",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/Metbcy/securescan"
Repository = "https://github.com/Metbcy/securescan"
Issues = "https://github.com/Metbcy/securescan/issues"
Changelog = "https://github.com/Metbcy/securescan/blob/main/CHANGELOG.md"

[project.scripts]
securescan = "securescan.cli:app"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "securescan",
    "securescan.api",
    "securescan.scanners",
    "securescan.ai",
]

[tool.setuptools.package-data]
securescan = ["data/**/*", "templates/**/*"]
